# SDL_stretch

./: ChangeLog  LICENSE  Makefile.am  Makefile.in  README.md  SDL_stretch.spec  acinclude.m4  aclocal.m4  configure  configure.ac
doc/: Makefile.am  Makefile.in  index.htm  make-doc.py
src/: Makefile.am  Makefile.in  SDL_stretchasm.h  sdlstretchcode.c  stretch.txt
src/asm/: sdlstretch_x86.h
win32/: Makefile.am  Makefile.in
win32/vc200x-ce/: SDL_Stretch.exp
